# ghc-homepage

./: .gitignore  GenIndex.hs  LICENSE.txt  README.md  Types.hs  _contributors.shtml  banner.shtml  check.sh  contributors.shtml  default.nix  distribution_packages.mkd  distribution_packages.shtml  download.shtml  download_ghc_029.shtml  download_ghc_210.shtml  download_ghc_302.shtml  download_ghc_402.shtml  download_ghc_404.shtml  download_ghc_406.shtml  download_ghc_408.shtml  download_ghc_500.shtml  download_ghc_502.shtml  download_ghc_504.shtml  download_ghc_5041.shtml  download_ghc_5042.shtml  download_ghc_5043.shtml  download_ghc_600.shtml  download_ghc_601.shtml  download_ghc_62.shtml  download_ghc_621.shtml  download_ghc_622.shtml  download_ghc_64.shtml  download_ghc_641.shtml  download_ghc_642.shtml  download_ghc_66.shtml  download_ghc_661.shtml  download_ghc_681.shtml  download_ghc_682.shtml  download_ghc_683.shtml  download_ghc_6_10_1.shtml  (+52 more)
partials/: ghc-std.html
survey2005/: application_comments.shtml  devmodel_comments.shtml  features_comments.shtml  ghc-std.shtml  index.shtml  overall_comments.shtml  platform_comments.shtml  release_freq_comments.shtml  stability_comments.shtml  summary.shtml  things_to_improve_comments.shtml  use_comments.shtml  work_comments.shtml
templates/: default.html
