name:                ghc-homepage
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari.foss@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable ghc-homepage
  main-is:             main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9,
                       hakyll == 4.9.*,
                       pandoc,
                       blaze-html == 0.9.*
  -- hs-source-dirs:      
  default-language:    Haskell2010
