name:                ghc-homepage
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari.foss@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable ghc-homepage
  main-is:             main.hs
  other-modules:       Types
  build-depends:       base >=4.8 && <4.10,
                       directory >= 1.3,
                       filepath >= 1.4,
                       hakyll == 4.9.*,
                       pandoc,
                       blaze-html == 0.9.*
  default-language:    Haskell2010

executable gen-index
  main-is:             GenIndex.hs
  other-modules:       Types
  build-depends:       base >=4.8 && <4.10,
                       directory >= 1.3,
                       filepath >= 1.4,
                       hakyll == 4.9.*
  default-language:    Haskell2010